[metadata]
name = cloudgenix_config
description = Configuration exporting and Continuous Integration (CI) capable configuration importing for the CloudGenix Cloud Controller.
version = 1.5.0b4
author = CloudGenix Developer Support
author-email = developers@cloudgenix.com
description-file = README.md

[egg_info]
tag_build = 
tag_date = 0

