[metadata]
name = cloudgenix_config
description = Configuration exporting and Continuous Integration (CI) capable configuration importing for the CloudGenix Cloud Controller.
version = 1.7.0b3
author = CloudGenix Developer Support
author-email = prisma-sase-developers@paloaltonetworks.com
description-file = README.md
